# althaia

./: .python-version  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
althaia/: asgi.py  settings.py  urls.py  wsgi.py
blog/: views.py
blog/templates/blog/: base.html
