[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "althaia"
version = "1"
requires-python = ">=3.12"
dependencies = [
  "django",
  "gunicorn",
  "sentry-sdk",
  "django-extensions",
  "whitenoise",
]
